// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar correctly filters and sorts results 1`] = `
Array [
  Object {
    "id": "Canvas",
    "key": "Canvas",
    "score": 42,
    "title": "Canvas",
    "type": "application",
    "url": "/app/test/Canvas",
  },
  Object {
    "id": "Discover",
    "key": "Discover",
    "score": 42,
    "title": "Discover",
    "type": "application",
    "url": "/app/test/Discover",
  },
  Object {
    "id": "Graph",
    "key": "Graph",
    "score": 42,
    "title": "Graph",
    "type": "application",
    "url": "/app/test/Graph",
  },
]
`;

exports[`SearchBar correctly filters and sorts results 2`] = `
Array [
  Object {
    "id": "Discover",
    "key": "Discover",
    "score": 42,
    "title": "Discover",
    "type": "application",
    "url": "/app/test/Discover",
  },
  Object {
    "id": "My Dashboard",
    "key": "My Dashboard",
    "score": 42,
    "title": "My Dashboard",
    "type": "test",
    "url": "/app/test/My Dashboard",
  },
]
`;
